# localize

./: LICENSE  README.md  __init__.py  cli.py  contract.py  dataset_models.py  demo_llm_judge.py  examples_dataset.py  generators.py  grading.py  judges.py  pyproject.toml  report.py  requirements.txt
docs/: Design.md
examples/salon/: baseline_validation.txt  contract.py  dataset.py  demo_llm_judge.py  run_report.py
src/localize/: judges.py  report.py
