[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localize"
version = "0.1.0"
description = "Grader for task-agent eval — grade any agent against a contract"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.20"]

[project.scripts]
localize = "localize.cli:main"

[tool.setuptools]
packages = ["localize"]
package-dir = {"localize" = "."}

